<resources>
    <string name="app_name">My Run</string>
    <string name="sign_in">sign in</string>
    <string name="register">register</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="change_image_button">Change</string>
    <string name="register_gender_f">Female</string>
    <string name="register_gender_m">Male</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <!--<string name="google_maps_key">AIzaSyADv4lI2TK7lFdETCWX6Jo26xexZgrdzOg</string>-->

    <string name="incorrect_login_text">email or password is incorrect</string>
    <string name="explain_permission_request">Disclaimer: Camera access is necessary to add a profile picture</string>
    <string name="profile_option">Touch the Android emoji to either take a picture or select one from your gallery</string>
    <string name="registration_confirmation">Thank you for registering!</string>
    <string name="profile_photo_file_name">profile_photo.png</string>
    <string name="ui_profile_photo_picker_title">"Select profile image"</string>
    <string name="ui_date_time_title">Set the date and time</string>
    <string name="ui_button_date_title">Set Date</string>
    <string name="ui_button_time_title">Set Time</string>
    <string name="dialog_fragment_tag_photo_picker">dialog_fragment_photo_picker</string>

    <string-array name="ui_profile_photo_picker_items">
        <item>Take picture from camera</item>
    </string-array>
    <string-array name="input_array">
        <item name="input_manualEntry">Manual Entry</item>
        <item name="input_GPS">GPS</item>
        <item name="input_Automatic">Automatic</item>
    </string-array>
    <string-array name="activity_array">
        <item>Walking</item>
        <item>Running</item>
        <item>Standing</item>
        <item>Cycling</item>
        <item>Hiking</item>
        <item>Swimming</item>
        <item>Elliptical</item>
        <item>Wheelchair</item>
        <item>Other</item>
    </string-array>

    <!-- SharedPreferences -->

    <string name="preference_name">my_shared_preferences</string>
    <string name="preference_key_profile_name">profile_name</string>
    <string name="preference_key_profile_gender">profile_gender</string>
    <string name="preference_key_profile_email">profile_email</string>
    <string name="preference_key_profile_password">profile_password</string>
    <string name="preference_key_profile_phone">profile_phone</string>
    <string name="preference_key_profile_major">profile_major</string>
    <string name="preference_key_profile_year">profile_class_year</string>
    <string name="title_history">History</string>
    <string name="title_start">Start</string>
    <string name="dropdown_editprof">Edit Profile</string>
    <string name="dropdown_settings">Settings</string>

</resources>
